--- a/运维/工具/对比目录.md
+++ b/运维/工具/对比目录.md
@@ -1,3 +1,4 @@
+```shell
 cd dir1
 
 find ./ -type f -exec md5sum {} \; | sort -k 2  > logdir/dir1.txt
@@ -11,3 +12,5 @@ find ./ -type f -exec md5sum {} \; | sort -k 2  > logdir/dir2.txt
 cd logdir
 
 diff dir1.txt dir2.txt
+```
+
